--- a/index.html
+++ b/index.html
@@ -923,7 +923,7 @@ and open the template in the editor.
                             <td><code class="code-options">rows</code></td>
                             <td>Integer</td>
                             <td><code class="code-default">4</td>
-                            <td>Number of rows to display in the iconpicker. Min value is: <code class="code-info">1</code></td>
+                            <td>Number of rows to display in the iconpicker. Value <code class="code-info">0</code> indicates all rows.</td>
                         </tr>
                         <tr>
                             <td><code class="code-options">search</code></td>
