--- a/index.html
+++ b/index.html
@@ -1420,7 +1420,7 @@ and open the template in the editor.
             m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
             })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-            ga('create', 'UA-38890641-4', 'github.com');
+            ga('create', 'UA-38890641-4', 'auto');
             ga('send', 'pageview');
         </script>
         
