Changes: * Increment version in source code. * Add sinonjs for test events.

--- a/test/index.html
+++ b/test/index.html
@@ -4,8 +4,6 @@
     <title>Mocha Tests</title>
 
     <link rel="stylesheet" href="../bootstrap-3.2.0/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="../bootstrap-3.2.0/css/docs.css"/>
-    <link rel="stylesheet" href="../bootstrap-3.2.0/css/pygments-manni.css"/>
     <link rel="stylesheet" href="../icon-fonts/elusive-icons-2.0.0/css/elusive-icons.min.css"/>
     <link rel="stylesheet" href="../icon-fonts/font-awesome-4.7.0/css/font-awesome.min.css"/>
     <link rel="stylesheet" href="../icon-fonts/ionicons-1.5.2/css/ionicons.min.css"/>
@@ -27,7 +25,6 @@
         <button id="demo_01" class="btn btn-default" role="iconpicker"></button>
         <!-- Div tag -->
         <div id="demo_02" role="iconpicker"></div>
-
 
         <!-- Example 1 -->
         <button id="demo_03" class="btn btn-default" data-iconset="glyphicon" data-icon="glyphicon-camera" role="iconpicker"></button>
@@ -98,6 +95,7 @@
     <div id="mocha"></div>
     <script src="../node_modules/mocha/mocha.js"></script>
     <script src="../node_modules/chai/chai.js"></script>
+    <script src="../bower_components/sinonjs/sinon.js"></script>
     <script>mocha.setup('bdd');</script>
 
     <!-- load code you want to test here -->
