Add CDN for ionicons library.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ and open the template in the editor.
         <link rel="stylesheet" href="bootstrap-3.3.7/css/pygments-manni.css"/>
         <link rel="stylesheet" href="icon-fonts/elusive-icons-2.0.0/css/elusive-icons.min.css"/>
         <link rel="stylesheet" href="icon-fonts/font-awesome-4.7.0/css/font-awesome.min.css"/>
-        <link rel="stylesheet" href="icon-fonts/ionicons-2.0.1/css/ionicons.min.css"/>
+        <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css"/>
         <link rel="stylesheet" href="icon-fonts/map-icons-2.1.0/css/map-icons.min.css"/>
         <link rel="stylesheet" href="icon-fonts/material-design-1.1.1/css/material-design-iconic-font.min.css"/>
         <link rel="stylesheet" href="icon-fonts/octicons-2.1.2/css/octicons.min.css"/>
@@ -216,8 +216,8 @@ and open the template in the editor.
                         <pre>
                             <code class="html"><span class="c">&lt;!-- Bootstrap --&gt;</span>
 <span class="nt">&lt;link</span> <span class="na">rel=</span><span class="s">"stylesheet"</span> <span class="na">href=</span><span class="s">"bootstrap-3.3.7/css/bootstrap.min.css"</span><span class="nt">/&gt;</span>
-<span class="c">&lt;!-- Ionicons --&gt;</span>
-<span class="nt">&lt;link</span> <span class="na">rel=</span><span class="s">"stylesheet"</span> <span class="na">href=</span><span class="s">"icon-fonts/ionicons-2.0.1/css/ionicons.min.css"</span><span class="nt">/&gt;</span>
+<span class="c">&lt;!-- Ionicons CDN --&gt;</span>
+<span class="nt">&lt;link</span> <span class="na">rel=</span><span class="s">"stylesheet"</span> <span class="na">href=</span><span class="s">"http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css"</span><span class="nt">/&gt;</span>
 <span class="c">&lt;!-- Bootstrap-Iconpicker --&gt;</span>
 <span class="nt">&lt;link</span> <span class="na">rel=</span><span class="s">"stylesheet"</span> <span class="na">href=</span><span class="s">"bootstrap-iconpicker/css/bootstrap-iconpicker.min.css"</span><span class="nt">/&gt;</span>
 </code>
@@ -242,8 +242,8 @@ and open the template in the editor.
                     <div class="bs-callout bs-callout-info">
                         <h4>Ionicons iconset availables are:</h4>
                         <p>
-                            <code>iconset-ionicon-1.5.2.min.js</code></br>
-                            <code>iconset-ionicon-2.0.1.min.js</code></br>
+                            <code>iconset-ionicon-2.0.1.min.js</code>       <span class="c">//Use Ionicons CDN => </span><span class="o">http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css</span></br>
+                            <code>iconset-ionicon-1.5.2.min.js</code>       <span class="c">//Use Ionicons CDN => </span><span class="o">http://code.ionicframework.com/ionicons/1.5.2/css/ionicons.min.css</span></br>
                         </p>
                     </div>
                 </div>
