Add CDN for fontawesome library.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ and open the template in the editor.
         <link rel="stylesheet" href="bootstrap-3.3.7/css/docs.css"/>
         <link rel="stylesheet" href="bootstrap-3.3.7/css/pygments-manni.css"/>
         <link rel="stylesheet" href="icon-fonts/elusive-icons-2.0.0/css/elusive-icons.min.css"/>
-        <link rel="stylesheet" href="icon-fonts/font-awesome-4.7.0/css/font-awesome.min.css"/>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
         <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css"/>
         <link rel="stylesheet" href="icon-fonts/map-icons-2.1.0/css/map-icons.min.css"/>
         <link rel="stylesheet" href="icon-fonts/material-design-1.1.1/css/material-design-iconic-font.min.css"/>
@@ -253,8 +253,8 @@ and open the template in the editor.
                         <pre>
                             <code class="html"><span class="c">&lt;!-- Bootstrap --&gt;</span>
 <span class="nt">&lt;link</span> <span class="na">rel=</span><span class="s">"stylesheet"</span> <span class="na">href=</span><span class="s">"bootstrap-3.3.7/css/bootstrap.min.css"</span><span class="nt">/&gt;</span>
-<span class="c">&lt;!-- Font Awesome --&gt;</span>
-<span class="nt">&lt;link</span> <span class="na">rel=</span><span class="s">"stylesheet"</span> <span class="na">href=</span><span class="s">"icon-fonts/font-awesome-4.7.0/css/font-awesome.min.css"</span><span class="nt">/&gt;</span>
+<span class="c">&lt;!-- Font Awesome CDN --&gt;</span>
+<span class="nt">&lt;link</span> <span class="na">rel=</span><span class="s">"stylesheet"</span> <span class="na">href=</span><span class="s">"https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"</span><span class="nt">/&gt;</span>
 <span class="c">&lt;!-- Bootstrap-Iconpicker --&gt;</span>
 <span class="nt">&lt;link</span> <span class="na">rel=</span><span class="s">"stylesheet"</span> <span class="na">href=</span><span class="s">"bootstrap-iconpicker/css/bootstrap-iconpicker.min.css"</span><span class="nt">/&gt;</span>
 </code>
@@ -279,14 +279,14 @@ and open the template in the editor.
                     <div class="bs-callout bs-callout-info">
                         <h4>Font Awesome iconset availables are:</h4>
                         <p>
-                            <code>iconset-fontawesome-4.7.0.min.js</code></br>
-                            <code>iconset-fontawesome-4.6.0.min.js</code></br>
-                            <code>iconset-fontawesome-4.5.0.min.js</code></br>
-                            <code>iconset-fontawesome-4.4.0.min.js</code></br>
-                            <code>iconset-fontawesome-4.3.0.min.js</code></br>
-                            <code>iconset-fontawesome-4.2.0.min.js</code></br>
-                            <code>iconset-fontawesome-4.1.0.min.js</code></br>
-                            <code>iconset-fontawesome-4.0.0.min.js</code>
+                            <code>iconset-fontawesome-4.7.0.min.js</code>       <span class="c">//Use Font Awesome CDN => </span><span class="o">https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css</span></br>
+                            <code>iconset-fontawesome-4.6.0.min.js</code>       <span class="c">//Use Font Awesome CDN => </span><span class="o">https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css</span></br>
+                            <code>iconset-fontawesome-4.5.0.min.js</code>       <span class="c">//Use Font Awesome CDN => </span><span class="o">https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css</span></br>
+                            <code>iconset-fontawesome-4.4.0.min.js</code>       <span class="c">//Use Font Awesome CDN => </span><span class="o">https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css</span></br>
+                            <code>iconset-fontawesome-4.3.0.min.js</code>       <span class="c">//Use Font Awesome CDN => </span><span class="o">https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css</span></br>
+                            <code>iconset-fontawesome-4.2.0.min.js</code>       <span class="c">//Use Font Awesome CDN => </span><span class="o">https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css</span></br>
+                            <code>iconset-fontawesome-4.1.0.min.js</code>       <span class="c">//Use Font Awesome CDN => </span><span class="o">https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css</span></br>
+                            <code>iconset-fontawesome-4.0.0.min.js</code>       <span class="c">//Use Font Awesome CDN => </span><span class="o">https://maxcdn.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.min.css</span>
                         </p>
                     </div>
                 </div>
