Add materialdesing-2.2.0 iconset.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ and open the template in the editor.
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
         <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css"/>
         <link rel="stylesheet" href="icon-fonts/map-icons-2.1.0/css/map-icons.min.css"/>
-        <link rel="stylesheet" href="icon-fonts/material-design-1.1.1/css/material-design-iconic-font.min.css"/>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css"/>
         <link rel="stylesheet" href="icon-fonts/octicons-2.1.2/css/octicons.min.css"/>
         <link rel="stylesheet" href="icon-fonts/typicons-2.0.6/css/typicons.min.css"/>
         <link rel="stylesheet" href="icon-fonts/weather-icons-1.2.0/css/weather-icons.min.css"/>
@@ -176,7 +176,7 @@ and open the template in the editor.
                         <li><a href="#octicon" role="tab" data-toggle="tab"><i class="octicon octicon-bug"></i> Octicons 2.1.2</a></li>
                         <li><a href="#typicon" role="tab" data-toggle="tab"><i class="typcn typcn-anchor"></i> Typicons 2.0.6</a></li>
                         <li><a href="#elusiveicon" role="tab" data-toggle="tab"><i class="el-icon-female"></i> Elusive Icons 2.0.0</a></li>
-                        <li><a href="#materialdesign" role="tab" data-toggle="tab"><i class="md md-3d-rotation"></i> Material Design 1.1.1</a></li>
+                        <li><a href="#materialdesign" role="tab" data-toggle="tab"><i class="zmdi zmdi-3d-rotation"></i> Material Design 2.2.0</a></li>
                     </ul>
                 </li>
             </ul>
@@ -238,7 +238,6 @@ and open the template in the editor.
 </code>
                         </pre>
                     </div>
-
                     <div class="bs-callout bs-callout-info">
                         <h4>Ionicons iconset availables are:</h4>
                         <p>
@@ -275,7 +274,6 @@ and open the template in the editor.
 </code>
                         </pre>
                     </div>
-
                     <div class="bs-callout bs-callout-info">
                         <h4>Font Awesome iconset availables are:</h4>
                         <p>
@@ -441,8 +439,8 @@ and open the template in the editor.
                         <pre>
                             <code class="html"><span class="c">&lt;!-- Bootstrap --&gt;</span>
 <span class="nt">&lt;link</span> <span class="na">rel=</span><span class="s">"stylesheet"</span> <span class="na">href=</span><span class="s">"bootstrap-3.3.7/css/bootstrap.min.css"</span><span class="nt">/&gt;</span>
-<span class="c">&lt;!-- Elusive Icons --&gt;</span>
-<span class="nt">&lt;link</span> <span class="na">rel=</span><span class="s">"stylesheet"</span> <span class="na">href=</span><span class="s">"icon-fonts/material-design-1.1.1/css/material-design-iconic-font.min.css"</span><span class="nt">/&gt;</span>
+<span class="c">&lt;!-- Material Design CDN --&gt;</span>
+<span class="nt">&lt;link</span> <span class="na">rel=</span><span class="s">"stylesheet"</span> <span class="na">href=</span><span class="s">"https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css"</span><span class="nt">/&gt;</span>
 <span class="c">&lt;!-- Bootstrap-Iconpicker --&gt;</span>
 <span class="nt">&lt;link</span> <span class="na">rel=</span><span class="s">"stylesheet"</span> <span class="na">href=</span><span class="s">"bootstrap-iconpicker/css/bootstrap-iconpicker.min.css"</span><span class="nt">/&gt;</span>
 </code>
@@ -462,6 +460,19 @@ and open the template in the editor.
 <span class="nt">&lt;script</span> <span class="na">type=</span><span class="s">"text/javascript"</span> <span class="na">src=</span><span class="s">"bootstrap-iconpicker/js/bootstrap-iconpicker.min.js"</span><span class="nt">&gt;</span><span class="nt">&lt;/script&gt;</span>
 </code>
                         </pre>
+                    </div>
+                    <div class="bs-callout bs-callout-info">
+                        <h4>Font Awesome iconset availables are:</h4>
+                        <p>
+                            <code>iconset-materialdesign-2.2.0.min.js</code>       <span class="c">//Use Material Design CDN => </span><span class="o">https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css</span></br>
+                            <code>iconset-materialdesign-2.1.2.min.js</code>       <span class="c">//Use Material Design CDN => </span><span class="o">https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.1.2/css/material-design-iconic-font.min.css</span></br>
+                            <code>iconset-materialdesign-2.1.1.min.js</code>       <span class="c">//Use Material Design CDN => </span><span class="o">https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.1.1/css/material-design-iconic-font.min.css</span></br>
+                            <code>iconset-materialdesign-2.1.0.min.js</code>       <span class="c">//Use Material Design CDN => </span><span class="o">https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.1.0/css/material-design-iconic-font.min.css</span></br>
+                            <code>iconset-materialdesign-2.0.2.min.js</code>       <span class="c">//Use Material Design CDN => </span><span class="o">https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.0.2/css/material-design-iconic-font.min.css</span></br>
+                            <code>iconset-materialdesign-2.0.1.min.js</code>       <span class="c">//Use Material Design CDN => </span><span class="o">https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.0.1/css/material-design-iconic-font.min.css</span></br>
+                            <code>iconset-materialdesign-2.0.0.min.js</code>       <span class="c">//Use Material Design CDN => </span><span class="o">https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.0.0/css/material-design-iconic-font.min.css</span></br>
+                            <code>iconset-materialdesign-1.1.1.min.js</code>       <span class="c">//Use Material Design CDN => </span><span class="o">icons-fonts/material-design-1.1.1/css/material-design-iconic-font.min.css</span>
+                        </p>
                     </div>
                 </div>
             </div>
@@ -542,8 +553,8 @@ and open the template in the editor.
                 </div>
                 <div class="row text-center" style="padding-top: 12px;">
                     <div class="col-md-6">
-                        <p><code>data-iconset="materialdesign"</code></br><code>data-icon="md-sd-storage"</code></p>
-                        <button class="btn btn-default" data-iconset="materialdesign" data-icon="md-sd-storage" role="iconpicker"></button>
+                        <p><code>data-iconset="materialdesign"</code></br><code>data-icon="zmdi-card-sd"</code></p>
+                        <button class="btn btn-default" data-iconset="materialdesign" data-icon="zmdi-card-sd" role="iconpicker"></button>
                     </div>
                 </div>
             </div>
@@ -566,7 +577,7 @@ and open the template in the editor.
 <span class="c">&lt;!-- Example 8 --&gt;</span>
 <span class="nt">&lt;button</span> <span class="na">class=</span><span class="s">"btn btn-default"</span> <span class="na">data-iconset=</span><span class="s">"elusiveicon"</span> <span class="na">data-icon=</span><span class="s">"el-icon-female"</span> <span class="na">role=</span><span class="s">"iconpicker"</span><span class="nt">&gt;</span><span class="nt">&lt;/button&gt;</span>
 <span class="c">&lt;!-- Example 9 --&gt;</span>
-<span class="nt">&lt;button</span> <span class="na">class=</span><span class="s">"btn btn-default"</span> <span class="na">data-iconset=</span><span class="s">"materialdesign"</span> <span class="na">data-icon=</span><span class="s">"md-sd-storage"</span> <span class="na">role=</span><span class="s">"iconpicker"</span><span class="nt">&gt;</span><span class="nt">&lt;/button&gt;</span>
+<span class="nt">&lt;button</span> <span class="na">class=</span><span class="s">"btn btn-default"</span> <span class="na">data-iconset=</span><span class="s">"materialdesign"</span> <span class="na">data-icon=</span><span class="s">"zmdi-card-sd"</span> <span class="na">role=</span><span class="s">"iconpicker"</span><span class="nt">&gt;</span><span class="nt">&lt;/button&gt;</span>
 </code>
                 </pre>
             </div>
