--- a/test/index.html
+++ b/test/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
     <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css"/>
     <link rel="stylesheet" href="../icon-fonts/map-icons-2.1.0/css/map-icons.min.css"/>
-    <link rel="stylesheet" href="../icon-fonts/material-design-1.1.1/css/material-design-iconic-font.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css"/>
     <link rel="stylesheet" href="../icon-fonts/octicons-2.1.2/css/octicons.min.css"/>
     <link rel="stylesheet" href="../icon-fonts/typicons-2.0.6/css/typicons.min.css"/>
     <link rel="stylesheet" href="../icon-fonts/weather-icons-1.2.0/css/weather-icons.min.css"/>
@@ -43,7 +43,7 @@
         <!-- Example 8 -->
         <button id="demo_10" class="btn btn-default" data-iconset="elusiveicon" data-icon="el-icon-female" role="iconpicker"></button>
         <!-- Example 9 -->
-        <button id="demo_11" class="btn btn-default" data-iconset="materialdesign" data-icon="md-sd-storage" role="iconpicker"></button>
+        <button id="demo_11" class="btn btn-default" data-iconset="materialdesign" data-icon="zmdi-card-sd" role="iconpicker"></button>
 
         <!-- Example 1 -->
         <div id="demo_12" data-search="true" data-search-text="Search..." role="iconpicker"></div>
