--- a/test/index.html
+++ b/test/index.html
@@ -100,7 +100,7 @@
 
     <!-- load code you want to test here -->
 
-    <script type="text/javascript" src="../jquery/jquery-1.10.2.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script type="text/javascript" src="../bootstrap-3.3.7/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="../bootstrap-iconpicker/js/iconset/iconset-all.min.js"></script>
     <script type="text/javascript" src="../bootstrap-iconpicker/js/bootstrap-iconpicker.js"></script>
