Add CDN for Bootstrap library.

--- a/test/index.html
+++ b/test/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Mocha Tests</title>
 
-    <link rel="stylesheet" href="../bootstrap-3.3.7/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="../icon-fonts/elusive-icons-2.0.0/css/elusive-icons.min.css"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
     <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css"/>
@@ -101,7 +101,7 @@
     <!-- load code you want to test here -->
 
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-    <script type="text/javascript" src="../bootstrap-3.3.7/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="../bootstrap-iconpicker/js/iconset/iconset-all.min.js"></script>
     <script type="text/javascript" src="../bootstrap-iconpicker/js/bootstrap-iconpicker.js"></script>
 
