--- a/test/index.html
+++ b/test/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css"/>
     <link rel="stylesheet" href="../icon-fonts/octicons-2.1.2/css/octicons.min.css"/>
     <link rel="stylesheet" href="../icon-fonts/typicons-2.0.6/css/typicons.min.css"/>
-    <link rel="stylesheet" href="../icon-fonts/weather-icons-1.2.0/css/weather-icons.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/weather-icons/1.2.0/css/weather-icons.min.css"/>
     <link rel="stylesheet" href="../bootstrap-iconpicker/css/bootstrap-iconpicker.min.css"/>
 
     <link rel="stylesheet" href="../node_modules/mocha/mocha.css">
@@ -44,51 +44,53 @@
         <button id="demo_10" class="btn btn-default" data-iconset="elusiveicon" data-icon="el-icon-female" role="iconpicker"></button>
         <!-- Example 9 -->
         <button id="demo_11" class="btn btn-default" data-iconset="materialdesign" data-icon="zmdi-card-sd" role="iconpicker"></button>
+        <!-- Example 10 -->
+        <button id="demo_12" class="btn btn-default" data-iconset="flagicon" data-icon="flag-icon-mx" role="iconpicker"></button>
 
         <!-- Example 1 -->
-        <div id="demo_12" data-search="true" data-search-text="Search..." role="iconpicker"></div>
+        <div id="demo_13" data-search="true" data-search-text="Search..." role="iconpicker"></div>
         <!-- Example 2 -->
-        <div id="demo_13" data-search="false" role="iconpicker"></div>
+        <div id="demo_14" data-search="false" role="iconpicker"></div>
 
         <!-- Example 1 -->
-        <div id="demo_14" data-label-header="{0} - {1} pages" data-label-footer="{0} - {1} of {2} icons" role="iconpicker"></div>
+        <div id="demo_15" data-label-header="{0} - {1} pages" data-label-footer="{0} - {1} of {2} icons" role="iconpicker"></div>
         <!-- Example 2 -->
-        <div id="demo_15" data-header="false" data-footer="false" role="iconpicker"></div>
+        <div id="demo_16" data-header="false" data-footer="false" role="iconpicker"></div>
 
-        <div id="demo_16" data-rows="3" data-cols="6" role="iconpicker"></div>
+        <div id="demo_17" data-rows="3" data-cols="6" role="iconpicker"></div>
 
         <!-- Example 1 -->
-        <div id="demo_17" data-align="left" role="iconpicker"></div>
+        <div id="demo_18" data-align="left" role="iconpicker"></div>
         <!-- Example 2 -->
-        <div id="demo_18" data-align="center" role="iconpicker"></div>
+        <div id="demo_19" data-align="center" role="iconpicker"></div>
         <!-- Example 3 -->
-        <div id="demo_19" data-align="right" role="iconpicker"></div>
+        <div id="demo_20" data-align="right" role="iconpicker"></div>
 
         <!-- Example 1 -->
-        <button id="demo_20" class="btn btn-default" data-placement="left" role="iconpicker"></button>
+        <button id="demo_21" class="btn btn-default" data-placement="left" role="iconpicker"></button>
         <!-- Example 2 -->
-        <button id="demo_21" class="btn btn-default" data-placement="top" role="iconpicker"></button>
+        <button id="demo_22" class="btn btn-default" data-placement="top" role="iconpicker"></button>
         <!-- Example 3 -->
-        <button id="demo_22" class="btn btn-default" data-placement="bottom" role="iconpicker"></button>
+        <button id="demo_23" class="btn btn-default" data-placement="bottom" role="iconpicker"></button>
         <!-- Example 4 -->
-        <button id="demo_23" class="btn btn-default" data-placement="right" role="iconpicker"></button>
+        <button id="demo_24" class="btn btn-default" data-placement="right" role="iconpicker"></button>
 
-        <div id="demo_24" data-arrow-class="btn-success" data-arrow-prev-icon-class="glyphicon glyphicon-chevron-left" data-arrow-next-icon-class="glyphicon glyphicon-chevron-right" role="iconpicker"></div>
+        <div id="demo_25" data-arrow-class="btn-success" data-arrow-prev-icon-class="glyphicon glyphicon-chevron-left" data-arrow-next-icon-class="glyphicon glyphicon-chevron-right" role="iconpicker"></div>
 
-        <div id="demo_25" data-selected-class="btn-danger" data-unselected-class="btn-info" role="iconpicker"></div>
+        <div id="demo_26" data-selected-class="btn-danger" data-unselected-class="btn-info" role="iconpicker"></div>
 
         <!-- Example 1 -->
-        <button id="demo_26" class="btn btn-default" role="iconpicker"></button>
+        <button id="demo_27" class="btn btn-default" role="iconpicker"></button>
         <!-- Example 2 -->
-        <button id="demo_27" class="btn btn-primary" role="iconpicker"></button>
+        <button id="demo_28" class="btn btn-primary" role="iconpicker"></button>
         <!-- Example 3 -->
-        <button id="demo_28" class="btn btn-success" role="iconpicker"></button>
+        <button id="demo_29" class="btn btn-success" role="iconpicker"></button>
         <!-- Example 4 -->
-        <button id="demo_29" class="btn btn-warning" role="iconpicker"></button>
+        <button id="demo_30" class="btn btn-warning" role="iconpicker"></button>
         <!-- Example 5 -->
-        <button id="demo_30" class="btn btn-danger" role="iconpicker"></button>
+        <button id="demo_31" class="btn btn-danger" role="iconpicker"></button>
         <!-- Example 6 -->
-        <button id="demo_31" class="btn btn-info" role="iconpicker"></button>
+        <button id="demo_32" class="btn btn-info" role="iconpicker"></button>
 
     </div>
 
