* rename folder "bootstrap-iconpicker" to "src". * Include all iconset files in file "bootstrap-iconpicker-iconset-all.js" * add flagicon v2.08 library. * add multiple versions  (v2.0.1, v2.0.2, v2.0.3, v2.0.4, v2.0.5, v2.0.7, v2.0.8 and v2.0.9) of typicons * add CDN for typicons.

--- a/test/index.html
+++ b/test/index.html
@@ -10,9 +10,9 @@
     <link rel="stylesheet" href="../icon-fonts/map-icons-2.1.0/css/map-icons.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css"/>
     <link rel="stylesheet" href="../icon-fonts/octicons-2.1.2/css/octicons.min.css"/>
-    <link rel="stylesheet" href="../icon-fonts/typicons-2.0.6/css/typicons.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/typicons/2.0.9/typicons.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/weather-icons/1.2.0/css/weather-icons.min.css"/>
-    <link rel="stylesheet" href="../bootstrap-iconpicker/css/bootstrap-iconpicker.min.css"/>
+    <link rel="stylesheet" href="../dist/css/bootstrap-iconpicker.min.css"/>
 
     <link rel="stylesheet" href="../node_modules/mocha/mocha.css">
 
@@ -22,75 +22,75 @@
     <div id="demos" style="display: none;">
 
         <!-- Button tag -->
-        <button id="demo_01" class="btn btn-default" role="iconpicker"></button>
+        <button id="demo_101" class="btn btn-default" role="iconpicker"></button>
         <!-- Div tag -->
-        <div id="demo_02" role="iconpicker"></div>
+        <div id="demo_102" role="iconpicker"></div>
 
         <!-- Example 1 -->
-        <button id="demo_03" class="btn btn-default" data-iconset="glyphicon" data-icon="glyphicon-camera" role="iconpicker"></button>
+        <button id="demo_201" class="btn btn-default" data-iconset="glyphicon" data-icon="glyphicon-camera" role="iconpicker"></button>
         <!-- Example 2 -->
-        <button id="demo_04" class="btn btn-default" data-iconset="ionicon" data-icon="ion-ionic" role="iconpicker"></button>
+        <button id="demo_202" class="btn btn-default" data-iconset="ionicon" data-icon="ion-ionic" role="iconpicker"></button>
         <!-- Example 3 -->
-        <button id="demo_05" class="btn btn-default" data-iconset="fontawesome" data-icon="fa-wifi" role="iconpicker"></button>
+        <button id="demo_203" class="btn btn-default" data-iconset="fontawesome" data-icon="fa-wifi" role="iconpicker"></button>
         <!-- Example 4 -->
-        <button id="demo_06" class="btn btn-default" data-iconset="weathericon" data-icon="wi-day-rain" role="iconpicker"></button>
+        <button id="demo_204" class="btn btn-default" data-iconset="weathericon" data-icon="wi-day-rain" role="iconpicker"></button>
         <!-- Example 5 -->
-        <button id="demo_07" class="btn btn-default" data-iconset="mapicon" data-icon="map-icon-walking" role="iconpicker"></button>
+        <button id="demo_205" class="btn btn-default" data-iconset="mapicon" data-icon="map-icon-walking" role="iconpicker"></button>
         <!-- Example 6 -->
-        <button id="demo_08" class="btn btn-default" data-iconset="octicon" data-icon="octicon-bug" role="iconpicker"></button>
+        <button id="demo_206" class="btn btn-default" data-iconset="octicon" data-icon="octicon-bug" role="iconpicker"></button>
         <!-- Example 7 -->
-        <button id="demo_09" class="btn btn-default" data-iconset="typicon" data-icon="typcn-anchor" role="iconpicker"></button>
+        <button id="demo_207" class="btn btn-default" data-iconset="typicon" data-icon="typcn-anchor" role="iconpicker"></button>
         <!-- Example 8 -->
-        <button id="demo_10" class="btn btn-default" data-iconset="elusiveicon" data-icon="el-icon-female" role="iconpicker"></button>
+        <button id="demo_208" class="btn btn-default" data-iconset="elusiveicon" data-icon="el-icon-female" role="iconpicker"></button>
         <!-- Example 9 -->
-        <button id="demo_11" class="btn btn-default" data-iconset="materialdesign" data-icon="zmdi-card-sd" role="iconpicker"></button>
+        <button id="demo_209" class="btn btn-default" data-iconset="materialdesign" data-icon="zmdi-card-sd" role="iconpicker"></button>
         <!-- Example 10 -->
-        <button id="demo_12" class="btn btn-default" data-iconset="flagicon" data-icon="flag-icon-mx" role="iconpicker"></button>
+        <button id="demo_210" class="btn btn-default" data-iconset="flagicon" data-icon="flag-icon-mx" role="iconpicker"></button>
 
         <!-- Example 1 -->
-        <div id="demo_13" data-search="true" data-search-text="Search..." role="iconpicker"></div>
+        <div id="demo_301" data-search="true" data-search-text="Search..." role="iconpicker"></div>
         <!-- Example 2 -->
-        <div id="demo_14" data-search="false" role="iconpicker"></div>
+        <div id="demo_302" data-search="false" role="iconpicker"></div>
 
         <!-- Example 1 -->
-        <div id="demo_15" data-label-header="{0} - {1} pages" data-label-footer="{0} - {1} of {2} icons" role="iconpicker"></div>
+        <div id="demo_401" data-label-header="{0} - {1} pages" data-label-footer="{0} - {1} of {2} icons" role="iconpicker"></div>
         <!-- Example 2 -->
-        <div id="demo_16" data-header="false" data-footer="false" role="iconpicker"></div>
+        <div id="demo_402" data-header="false" data-footer="false" role="iconpicker"></div>
 
-        <div id="demo_17" data-rows="3" data-cols="6" role="iconpicker"></div>
+        <div id="demo_501" data-rows="3" data-cols="6" role="iconpicker"></div>
 
         <!-- Example 1 -->
-        <div id="demo_18" data-align="left" role="iconpicker"></div>
+        <div id="demo_601" data-align="left" role="iconpicker"></div>
         <!-- Example 2 -->
-        <div id="demo_19" data-align="center" role="iconpicker"></div>
+        <div id="demo_602" data-align="center" role="iconpicker"></div>
         <!-- Example 3 -->
-        <div id="demo_20" data-align="right" role="iconpicker"></div>
+        <div id="demo_603" data-align="right" role="iconpicker"></div>
 
         <!-- Example 1 -->
-        <button id="demo_21" class="btn btn-default" data-placement="left" role="iconpicker"></button>
+        <button id="demo_701" class="btn btn-default" data-placement="left" role="iconpicker"></button>
         <!-- Example 2 -->
-        <button id="demo_22" class="btn btn-default" data-placement="top" role="iconpicker"></button>
+        <button id="demo_702" class="btn btn-default" data-placement="top" role="iconpicker"></button>
         <!-- Example 3 -->
-        <button id="demo_23" class="btn btn-default" data-placement="bottom" role="iconpicker"></button>
+        <button id="demo_703" class="btn btn-default" data-placement="bottom" role="iconpicker"></button>
         <!-- Example 4 -->
-        <button id="demo_24" class="btn btn-default" data-placement="right" role="iconpicker"></button>
+        <button id="demo_704" class="btn btn-default" data-placement="right" role="iconpicker"></button>
 
-        <div id="demo_25" data-arrow-class="btn-success" data-arrow-prev-icon-class="glyphicon glyphicon-chevron-left" data-arrow-next-icon-class="glyphicon glyphicon-chevron-right" role="iconpicker"></div>
+        <div id="demo_801" data-arrow-class="btn-success" data-arrow-prev-icon-class="glyphicon glyphicon-chevron-left" data-arrow-next-icon-class="glyphicon glyphicon-chevron-right" role="iconpicker"></div>
 
-        <div id="demo_26" data-selected-class="btn-danger" data-unselected-class="btn-info" role="iconpicker"></div>
+        <div id="demo_802" data-selected-class="btn-danger" data-unselected-class="btn-info" role="iconpicker"></div>
 
         <!-- Example 1 -->
-        <button id="demo_27" class="btn btn-default" role="iconpicker"></button>
+        <button id="demo_901" class="btn btn-default" role="iconpicker"></button>
         <!-- Example 2 -->
-        <button id="demo_28" class="btn btn-primary" role="iconpicker"></button>
+        <button id="demo_902" class="btn btn-primary" role="iconpicker"></button>
         <!-- Example 3 -->
-        <button id="demo_29" class="btn btn-success" role="iconpicker"></button>
+        <button id="demo_903" class="btn btn-success" role="iconpicker"></button>
         <!-- Example 4 -->
-        <button id="demo_30" class="btn btn-warning" role="iconpicker"></button>
+        <button id="demo_904" class="btn btn-warning" role="iconpicker"></button>
         <!-- Example 5 -->
-        <button id="demo_31" class="btn btn-danger" role="iconpicker"></button>
+        <button id="demo_905" class="btn btn-danger" role="iconpicker"></button>
         <!-- Example 6 -->
-        <button id="demo_32" class="btn btn-info" role="iconpicker"></button>
+        <button id="demo_906" class="btn btn-info" role="iconpicker"></button>
 
     </div>
 
@@ -104,8 +104,8 @@
 
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="../bootstrap-iconpicker/js/iconset/iconset-all.min.js"></script>
-    <script type="text/javascript" src="../bootstrap-iconpicker/js/bootstrap-iconpicker.js"></script>
+    <script type="text/javascript" src="../dist/js/bootstrap-iconpicker-iconset-all.min.js"></script>
+    <script type="text/javascript" src="../dist/js/bootstrap-iconpicker.min.js"></script>
 
     <script src="test.js"></script>
 
