Support for multiple versions of Octicons (v2.0.0, v2.0.1, v2.0.2, v2.1.0, v2.1.1, v2.1.2, v2.2.0, v2.2.1, v2.2.2, v2.2.2, v2.3.0, v2.4.0, v2.4.1, v3.0.0, v3.1.0, v3.2.0, v3.3.0, v3.4.0, v3.4.1, v3.5.0, v4.0.0, v4.1.0, v4.1.1, v4.2.0, v4.2.1, v4.3.0 and v4.4.0)

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ and open the template in the editor.
         <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css"/>
         <link rel="stylesheet" href="icon-fonts/map-icons-2.1.0/css/map-icons.min.css"/>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css"/>
-        <link rel="stylesheet" href="icon-fonts/octicons-2.1.2/css/octicons.min.css"/>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/octicons/4.4.0/font/octicons.min.css"/>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/typicons/2.0.9/typicons.min.css"/>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/weather-icons/1.3.1/css/weather-icons.min.css"/>
         <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/weather-icons/2.0.9/css/weather-icons-wind.min.css"/> -->
@@ -396,8 +396,8 @@ and open the template in the editor.
                         <pre>
                             <code class="html"><span class="c">&lt;!-- Bootstrap CDN --&gt;</span>
 <span class="nt">&lt;link</span> <span class="na">rel=</span><span class="s">"stylesheet"</span> <span class="na">href=</span><span class="s">"https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"</span><span class="nt">/&gt;</span>
-<span class="c">&lt;!-- Octicons --&gt;</span>
-<span class="nt">&lt;link</span> <span class="na">rel=</span><span class="s">"stylesheet"</span> <span class="na">href=</span><span class="s">"icon-fonts/octicons-2.1.2/css/octicons.min.css"</span><span class="nt">/&gt;</span>
+<span class="c">&lt;!-- Octicons CDN --&gt;</span>
+<span class="nt">&lt;link</span> <span class="na">rel=</span><span class="s">"stylesheet"</span> <span class="na">href=</span><span class="s">"https://cdnjs.cloudflare.com/ajax/libs/octicons/4.4.0/font/octicons.min.css"</span><span class="nt">/&gt;</span>
 <span class="c">&lt;!-- Bootstrap-Iconpicker --&gt;</span>
 <span class="nt">&lt;link</span> <span class="na">rel=</span><span class="s">"stylesheet"</span> <span class="na">href=</span><span class="s">"dist/css/bootstrap-iconpicker.min.css"</span><span class="nt">/&gt;</span>
 </code>
@@ -420,6 +420,39 @@ and open the template in the editor.
                     </div>
                     <p>Result</p>
                     <div data-iconset="octicon" role="iconpicker"></div>
+                    <div class="bs-callout bs-callout-info">
+                        <h4>Iconset versions availables are:</h4>
+                        <p>
+                            <code>4.4.0</code>       <span class="c">//Use CDN => </span><span class="o">https://cdnjs.cloudflare.com/ajax/libs/octicons/4.4.0/font/octicons.min.css</span></br>
+                            <code>4.3.0</code>       <span class="c">//Use CDN => </span><span class="o">https://cdnjs.cloudflare.com/ajax/libs/octicons/4.3.0/font/octicons.min.css</span></br>
+                            <code>4.2.1</code>       <span class="c">//Use CDN => </span><span class="o">https://cdnjs.cloudflare.com/ajax/libs/octicons/4.2.1/font/octicons.min.css</span></br>
+                            <code>4.2.0</code>       <span class="c">//Use CDN => </span><span class="o">https://cdnjs.cloudflare.com/ajax/libs/octicons/4.2.0/font/octicons.min.css</span></br>
+                            <code>4.1.1</code>       <span class="c">//Use CDN => </span><span class="o">https://cdnjs.cloudflare.com/ajax/libs/octicons/4.1.1/font/octicons.min.css</span></br>
+                            <code>4.1.0</code>       <span class="c">//Use CDN => </span><span class="o">https://cdnjs.cloudflare.com/ajax/libs/octicons/4.1.0/font/octicons.min.css</span></br>
+                            <code>4.0.0</code>       <span class="c">//Use CDN => </span><span class="o">https://cdnjs.cloudflare.com/ajax/libs/octicons/4.0.0/font/octicons.min.css</span></br>
+                            <code>3.5.0</code>       <span class="c">//Use CDN => </span><span class="o">https://cdnjs.cloudflare.com/ajax/libs/octicons/3.5.0/octicons.min.css</span></br>
+                            <code>3.4.1</code>       <span class="c">//Use CDN => </span><span class="o">https://cdnjs.cloudflare.com/ajax/libs/octicons/3.4.1/octicons.min.css</span></br>
+                            <code>3.4.0</code>       <span class="c">//Use CDN => </span><span class="o">https://cdnjs.cloudflare.com/ajax/libs/octicons/3.4.0/octicons.min.css</span></br>
+                            <code>3.3.0</code>       <span class="c">//Use CDN => </span><span class="o">https://cdnjs.cloudflare.com/ajax/libs/octicons/3.3.0/octicons.min.css</span></br>
+                            <code>3.2.0</code>       <span class="c">//Use CDN => </span><span class="o">https://cdnjs.cloudflare.com/ajax/libs/octicons/3.2.0/octicons.min.css</span></br>
+                            <code>3.1.0</code>       <span class="c">//Use CDN => </span><span class="o">https://cdnjs.cloudflare.com/ajax/libs/octicons/3.1.0/octicons.min.css</span></br>
+                            <code>3.0.1</code>       <span class="c">//Use CDN => </span><span class="o">https://cdnjs.cloudflare.com/ajax/libs/octicons/3.0.1/octicons.min.css</span></br>
+                            <code>3.0.0</code>       <span class="c">//Use CDN => </span><span class="o">https://cdnjs.cloudflare.com/ajax/libs/octicons/3.0.0/octicons.min.css</span></br>
+                            <code>2.4.1</code>       <span class="c">//Use CDN => </span><span class="o">https://cdnjs.cloudflare.com/ajax/libs/octicons/2.4.1/octicons.min.css</span></br>
+                            <code>2.4.0</code>       <span class="c">//Use CDN => </span><span class="o">https://cdnjs.cloudflare.com/ajax/libs/octicons/2.4.0/octicons.min.css</span></br>
+                            <code>2.3.0</code>       <span class="c">//Use CDN => </span><span class="o">https://cdnjs.cloudflare.com/ajax/libs/octicons/2.3.0/octicons.min.css</span></br>
+                            <code>2.2.3</code>       <span class="c">//Use CDN => </span><span class="o">https://cdnjs.cloudflare.com/ajax/libs/octicons/2.2.3/octicons.min.css</span></br>
+                            <code>2.2.2</code>       <span class="c">//Use CDN => </span><span class="o">https://cdnjs.cloudflare.com/ajax/libs/octicons/2.2.2/octicons.min.css</span></br>
+                            <code>2.2.1</code>       <span class="c">//Use CDN => </span><span class="o">https://cdnjs.cloudflare.com/ajax/libs/octicons/2.2.1/octicons.min.css</span></br>
+                            <code>2.2.0</code>       <span class="c">//Use CDN => </span><span class="o">https://cdnjs.cloudflare.com/ajax/libs/octicons/2.2.0/octicons.min.css</span></br>
+                            <code>2.1.2</code>       <span class="c">//Use CDN => </span><span class="o">https://cdnjs.cloudflare.com/ajax/libs/octicons/2.1.2/octicons.min.css</span></br>
+                            <code>2.1.1</code>       <span class="c">//Use CDN => </span><span class="o">https://cdnjs.cloudflare.com/ajax/libs/octicons/2.1.1/octicons.min.css</span></br>
+                            <code>2.1.0</code>       <span class="c">//Use CDN => </span><span class="o">https://cdnjs.cloudflare.com/ajax/libs/octicons/2.1.0/octicons.min.css</span></br>
+                            <code>2.0.2</code>       <span class="c">//Use CDN => </span><span class="o">https://cdnjs.cloudflare.com/ajax/libs/octicons/2.0.2/octicons.min.css</span></br>
+                            <code>2.0.1</code>       <span class="c">//Use CDN => </span><span class="o">https://cdnjs.cloudflare.com/ajax/libs/octicons/2.0.1/octicons.min.css</span></br>
+                            <code>2.0.0</code>       <span class="c">//Use CDN => </span><span class="o">https://cdnjs.cloudflare.com/ajax/libs/octicons/2.0.0/octicons.min.css</span>
+                        </p>
+                    </div>
                 </div>
                 <div class="tab-pane" id="typicon">
                     <p>1.- Add the style files: <code>bootstrap.min.css</code>, <code>typicons.min.css</code> and <code>bootstrap-iconpicker.min.css</code></p>
@@ -589,7 +622,7 @@ and open the template in the editor.
                 <div class="row text-center" style="padding-top: 12px;">
                     <div class="col-md-6">
                         <p><code>data-iconset="fontawesome"</code></br><code>data-icon="fa-wifi"</code></p>
-                        <button class="btn btn-default" data-iconset="fontawesome" data-iconset-version="4.0.0" data-icon="fa-wifi" role="iconpicker"></button>
+                        <button class="btn btn-default" data-iconset="fontawesome" data-icon="fa-wifi" role="iconpicker"></button>
                     </div>
                     <div class="col-md-6">
                         <p><code>data-iconset="weathericon"</code></br><code>data-icon="wi-day-rain"</code></p>
